update release notes

--- a/release-notes/v1.1.0.md
+++ b/release-notes/v1.1.0.md
@@ -9,7 +9,7 @@
 - bugfix
 ## mt2-profile
 - 集成spring state machine状态机
-- 采用了事务驱动模型
+- 采用了事件驱动模型
 - 分布式事务设计改善，增加事务追踪以及回滚功能
 - Sonarquebe扫描后代码改进
 - 添加了unit test
