--- a/release-notes/v1.3.0.md
+++ b/release-notes/v1.3.0.md
@@ -1,3 +1,11 @@
 ## mt2-profile
 - 允许动态定义订单流程
 - 分布式事务管理与业务逻辑分离
+## mt3-product
+- 改进前端后端搜索API
+- 添加自定义商品过滤器
+- 多图片支持
+- Sku自定义图片以及展示
+- 支持无Sku
+- UI优化
+- bugfix
