update release notes

--- a/release-notes/v1.3.0.md
+++ b/release-notes/v1.3.0.md
@@ -1,11 +1,13 @@
-## mt2-profile
-- 允许动态定义订单流程
-- 分布式事务管理与业务逻辑分离
 ## mt3-product
-- 改进前端后端搜索API
-- 添加自定义商品过滤器
-- 多图片支持
-- Sku自定义图片以及展示
+- 重新设计Product Restful API，新增Json PATCH
+- 采用JPA Criteria API重新设计API，支持例如 ?query=price>=500 等更加灵活的查询方式
+- 添加商品过滤器功能
+- 产品多图片支持
+- Sku自定义图片以及自动切换展示
 - 支持无Sku
-- UI优化
+- 添加了更多的排序功能（价格，销量，名称）
+- 商品批量上/下架/删除
+- bugfix
+## mt9-oauth-ui
+- UI同步更新以及优化
 - bugfix
