update release notes

--- a/release-notes/v1.4.0.md
+++ b/release-notes/v1.4.0.md
@@ -1,10 +1,14 @@
-## mt2-profile
-- 允许动态定义订单流程
-- 分布式事务管理与业务逻辑分离
 ## mt3-product
-- 追踪产品变化
+- 继续重构Restful api,改进了设计风格
 ## mt9-oauth-ui
+- 支持更加灵活的产品搜索方式
+- 支持在表格视图中直接编辑/複製特定值（名称，备注等）
 - 产品克隆
-- 添加前端缓存来提升性能
 - 产品预览
-- 快速编辑产品
+- 改善UI
+- bugfix
+## mt14-web-component
+- 将个别UI组件提取作为Web component来跨框架来复用
+## mt10-form-builder
+- 支持i18n
+- 添加了一些utility功能
