update v1.5.0 release notes

--- a/release-notes/v1.5.0.md
+++ b/release-notes/v1.5.0.md
@@ -1,3 +1,15 @@
-## mt2-profile
-- 允许动态定义订单流程
-- 分布式事务管理与业务逻辑分离
+## mt9-oauth-ui
+- 新增Jwt令牌管理功能
+- 新增SKU库存单独管理功能
+- 新增操作记录管理功能
+## 通用
+- 拓展了Auditable，新增Deleted字段来软删除
+- 删除和创建操作现在默认支持回滚操作
+- 拓展了CRUD的核心代码，支持PreDelete,PostDelete,PrePatch,PostPatch
+## mt0-oauth2
+- Bug fix
+- 依据SonarQube检查结果重构了部分代码
+## mt1-proxy
+- Bug fix
+- 依据SonarQube检查结果重构了部分代码
+- 增加了Http缓存相关功能，默认５秒缓存以及Etag缓存
