update release notes

--- a/release-notes/v1.6.0.md
+++ b/release-notes/v1.6.0.md
@@ -1,3 +1,18 @@
-## mt2-profile
-- 允许动态定义订单流程
-- 分布式事务管理与业务逻辑分离
+## mt2-user-profile
+- 将订单状态机以及任务记录移动到mt15服务中
+- 允许单独更新订单地址
+- 代码重构
+- Bugfix
+## mt9-oauth2-ui
+- 新增了任务管理页面
+- 改进了订单以及库存管理页面
+- Bug fix
+## mt7-object-market
+- 同步更新UI
+## mt1-proxy
+- Http缓存相关功能Bug fix
+## mt15-saga-orchestrator(新增)
+- 采用Saga模式来进行分布式事务管理
+- 采用了Spring batch来进行订单批量回收
+- 包含了订单状态机以及任务聚合根
+# [更多详情](https://github.com/users/publicdevop2019/projects/14)
