update release notes

--- a/release-notes/v1.7.0.md
+++ b/release-notes/v1.7.0.md
@@ -1,2 +1,34 @@
-## mt2-profile
-- 允许动态定义订单流程
+# 演示链接(纯UI离线版)
+- [多树商城(中文)](https://www.duoshu.org/mall/zh/index.html)
+- [多树商城(英文)](https://www.duoshu.org/mall/en/index.html)
+- [多树管理后台](https://www.duoshu.org/index.html)
+# 更新日志
+## Common
+- 新增了消息中间件RabbitMQ来处理全局回滚
+- 回滚操作可选
+- 演示网址支持Https http2
+- CRUD公共模块重构，简化配置，自动注册Bean
+- 改进幂等性设计，返回200而不是400
+## mt1-edge-proxy
+- 公共URL不验证jwt
+## mt3-product
+- 重新设计了产品标签字段来实现精确搜索
+## mt5-file-upload
+- DDD重构
+## mt10-form-builder
+- 升级到Angular v10
+- 动态表单现在支持禁用
+- 新增了Input text敏感信息以及必填支持
+- 新增超大列表组件 virtual-select
+- 新增分页列表组件 pagination-select
+- 新增日期选择器组件
+## mt9-oauth2-ui
+- 升级到Angular v10
+- 组件优化
+## mt7-object-market
+- 使用手机访问时，地址表单使用原生下拉组件
+## mt15-saga-orchestrator
+- 改善了异常的记录方式
+## mt8-sys-test
+- 添加了新的测试
+# [更多详情](https://github.com/users/publicdevop2019/projects/16)
