add new release notes

--- a/release-notes/v2.4.0.md
+++ b/release-notes/v2.4.0.md
@@ -18,7 +18,7 @@
 - 重新设计了Query类
 - 当标签改动时，关联的聚合会收到提示
 - 采用了hibernate metamodel
-- 项目模块重命名(mt3-mall)
+- 项目模块重命名(mt3-product)
 - bugfix
 ## mt-common
 - 添加了JpaCriteriaApi相关工具类
