--- a/release-notes/v2.6.0.md
+++ b/release-notes/v2.6.0.md
@@ -18,6 +18,10 @@
 - 添加了逆向事务逻辑
 ## mt3-mall
 - 添加了逆向事务逻辑
+## mt6-payment
+- 添加了逆向事务逻辑
+## mt4-messenger
+- 改善了商城通知模版
 ## mt-common
 - 添加了基于事件设计的相关功能性代码
 ## mt9-oauth-ui
